# python-study-projects

./: README.md
doc/: UsandoProjetos.md
encryption/: README.md  aes_cipher.py  main.py  pyproject.toml  requirements.txt
encryption/aes_cipher/: __init__.py  aes_cipher.py
file_permissions_manager/: README.md  main.py  pyproject.toml
file_permissions_manager/permission_manager/: __init__.py  permission_manager.py
image_composer/: README.md  main.py
printer_assistent/: README.md  main.py  pyproject.toml
printer_assistent/printer_manager/: printer_manager.py
printer_manager/: README.md  main.py  pyproject.toml
printer_manager/printer_manager/: __init__.py  printer_manager.py
printers_tools/: main.py  pyproject.toml  requirements.txt
printers_tools/printer_manager/: __init__.py  printer_manager.py
webview/: main.py
