[tool.poetry]
name = "encryption"
version = "0.1.0"
description = ""
authors = ["Hennan Lewis <39320310+hennanlewis@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^44.0.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
