[tool.poetry]
name = "printer-helper"
version = "0.1.0"
description = ""
authors = ["Hennan Lewis <39320310+hennanlewis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pywin32 = "^308"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
